Modifications textuel du site html depuis backup

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>J.E. - Technicien IT Freelance</title>
+  <title>J.E - Technicien IT Freelance</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-900 text-white font-sans">
@@ -11,7 +11,7 @@
   <!-- Section Hero gamer/tech avec néons -->
   <section class="relative bg-gradient-to-r from-blue-900 via-purple-900 to-blue-900 min-h-screen flex flex-col justify-center items-center text-center px-6">
     <h1 class="text-5xl md:text-7xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-500 drop-shadow-lg">
-      J.E. - Technicien IT Freelance
+      J.E - Technicien IT Freelance
     </h1>
     <p class="mt-6 text-xl md:text-2xl text-blue-300 max-w-xl">
       Dépannage, cybersécurité, outils collaboratifs & +.
@@ -43,7 +43,7 @@
   <section class="max-w-3xl mx-auto px-4 py-12">
     <h2 class="text-2xl font-semibold text-blue-300 mb-4 border-b border-blue-500 pb-2">🧠 À propos</h2>
     <p class="text-gray-300 leading-relaxed">
-      Je m'appelle J.E., technicien IT passionné. J'interviens sur la gestion de parcs, la cybersécurité, et les solutions collaboratives, que je déploie en fonction des besoins clients. Mon approche ? Rigueur, autonomie et passion, comme dans une team bien organisée. 🎮💻
+      Je m'appelle Jean Edmond, technicien IT passionné. J'interviens sur la gestion de parcs, la cybersécurité, et les solutions collaboratives, que je déploie en fonction des besoins clients. Mon approche ? Rigueur, autonomie et passion, comme dans une team bien organisée. 🎮💻
     </p>
   </section>
 
@@ -67,7 +67,7 @@
   </section>
 
   <footer class="text-center py-6 text-gray-500">
-    © 2025 J.E. | Site freelance tech
+    © 2025 J.E – Freelance web & IT | Propulsé par passion et café ☕
   </footer>
 
   <!-- Script pour gérer l'affichage du message de confirmation -->
